# memory-leak-detector

./: CMakeLists.txt  CMakeSettings.json  MemControllerAgent.cpp  MemControllerAgent.h  MemControllerService.cpp  MemControllerService.h  MemControllerService1.sln  MemControllerService1.vcxproj  MemControllerService1.vcxproj.filters  MemLeakControllerService.cpp  MemLeakControllerService.h  MemoryEntry.h  main.cpp  malloc_allocator.hpp  new.hpp  stack_helper.h
